force-app/main/default/objects/Opportunity/fields/pstar__Goal_G__c.field-meta.xml
<CustomField>
    <fullName>pstar__Goal_G__c</fullName>
    <label>Goal G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>