force-app/main/default/objects/Opportunity/fields/pstar__Goal_H__c.field-meta.xml
<CustomField>
    <fullName>pstar__Goal_H__c</fullName>
    <label>Goal H</label>
    <length>255</length>
    <type>Text</type>
</CustomField>