force-app/main/default/objects/Opportunity/fields/pstar__Have_you_bullied_others__c.field-meta.xml
<CustomField>
    <fullName>pstar__Have_you_bullied_others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you bullied others</label>
    <type>Checkbox</type>
</CustomField>