force-app/main/default/objects/Opportunity/fields/pstar__Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>pstar__Home_Phone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>