force-app/main/default/objects/Opportunity/fields/pstar__Hospitalization_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Hospitalization_Discharge_Date__c</fullName>
    <label>Hospitalization Discharge Date</label>
    <type>Date</type>
</CustomField>