force-app/main/default/objects/Opportunity/fields/pstar__Hospitalization_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>pstar__Hospitalization_Facility_Name__c</fullName>
    <label>Hospitalization Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>