force-app/main/default/objects/Opportunity/fields/pstar__Hospitalization_Notes__c.field-meta.xml
<CustomField>
    <fullName>pstar__Hospitalization_Notes__c</fullName>
    <label>Hospitalization Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>