force-app/main/default/objects/Opportunity/fields/pstar__Hospitalization_Reason__c.field-meta.xml
<CustomField>
    <fullName>pstar__Hospitalization_Reason__c</fullName>
    <label>Hospitalization Reason</label>
    <type>TextArea</type>
</CustomField>