force-app/main/default/objects/Opportunity/fields/pstar__How_did_you_hear_of_us__c.field-meta.xml
<CustomField>
    <fullName>pstar__How_did_you_hear_of_us__c</fullName>
    <label>How did you hear of us?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>