force-app/main/default/objects/Opportunity/fields/pstar__How_did_you_reach_us_Details__c.field-meta.xml
<CustomField>
    <fullName>pstar__How_did_you_reach_us_Details__c</fullName>
    <label>How did you reach us? - Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>