force-app/main/default/objects/Opportunity/fields/pstar__Hx_of_pet_aggression__c.field-meta.xml
<CustomField>
    <fullName>pstar__Hx_of_pet_aggression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hx of pet aggression</label>
    <type>Checkbox</type>
</CustomField>