force-app/main/default/objects/Opportunity/fields/pstar__If_pets_Yes_what_kind__c.field-meta.xml
<CustomField>
    <fullName>pstar__If_pets_Yes_what_kind__c</fullName>
    <label>If pets Yes what kind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>