force-app/main/default/objects/Opportunity/fields/pstar__If_Yes_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>pstar__If_Yes_Action_Taken__c</fullName>
    <label>If Yes Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>