force-app/main/default/objects/Opportunity/fields/pstar__If_Yes_Specify_on_Form__c.field-meta.xml
<CustomField>
    <fullName>pstar__If_Yes_Specify_on_Form__c</fullName>
    <label>If Yes Specify on Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>