force-app/main/default/objects/Opportunity/fields/pstar__If_Yes_When_Branch__c.field-meta.xml
<CustomField>
    <fullName>pstar__If_Yes_When_Branch__c</fullName>
    <label>If Yes When Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>