force-app/main/default/objects/Opportunity/fields/pstar__Incarcerated__c.field-meta.xml
<CustomField>
    <fullName>pstar__Incarcerated__c</fullName>
    <label>Incarcerated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>