force-app/main/default/objects/Opportunity/fields/pstar__Incarceration_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>pstar__Incarceration_Facility_Name__c</fullName>
    <label>Incarceration Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>