force-app/main/default/objects/Opportunity/fields/pstar__Incarceration_Notes__c.field-meta.xml
<CustomField>
    <fullName>pstar__Incarceration_Notes__c</fullName>
    <label>Incarceration Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>