force-app/main/default/objects/Opportunity/fields/pstar__Incarceration_Reason__c.field-meta.xml
<CustomField>
    <fullName>pstar__Incarceration_Reason__c</fullName>
    <label>Incarceration Reason</label>
    <type>TextArea</type>
</CustomField>