force-app/main/default/objects/Opportunity/fields/pstar__Incarceration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Incarceration_Start_Date__c</fullName>
    <label>Incarceration Start Date</label>
    <type>Date</type>
</CustomField>