force-app/main/default/objects/Opportunity/fields/pstar__Inpatient_Trtmnt_Hx__c.field-meta.xml
<CustomField>
    <fullName>pstar__Inpatient_Trtmnt_Hx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inpatient Trtmnt Hx</label>
    <type>Checkbox</type>
</CustomField>