force-app/main/default/objects/Opportunity/fields/pstar__Is_High_No_Show__c.field-meta.xml
<CustomField>
    <fullName>pstar__Is_High_No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is High No Show</label>
    <type>Checkbox</type>
</CustomField>