force-app/main/default/objects/Opportunity/fields/pstar__Is_Migrated_from_Credible__c.field-meta.xml
<CustomField>
    <fullName>pstar__Is_Migrated_from_Credible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Migrated from Credible</label>
    <type>Checkbox</type>
</CustomField>