force-app/main/default/objects/Opportunity/fields/pstar__Is_Restricted__c.field-meta.xml
<CustomField>
    <fullName>pstar__Is_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Restricted</label>
    <type>Checkbox</type>
</CustomField>