force-app/main/default/objects/Opportunity/fields/pstar__Is_There_a_Hx_of_Trauma__c.field-meta.xml
<CustomField>
    <fullName>pstar__Is_There_a_Hx_of_Trauma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is There a Hx of Trauma</label>
    <type>Checkbox</type>
</CustomField>