force-app/main/default/objects/Opportunity/fields/pstar__Last_Client_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>pstar__Last_Client_Status_Update__c</fullName>
    <label>Last Client Status Update</label>
    <type>Date</type>
</CustomField>