force-app/main/default/objects/Opportunity/fields/pstar__Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Last_Service_Date__c</fullName>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>