force-app/main/default/objects/Opportunity/fields/pstar__Legal_Involve_in_Past_Yr__c.field-meta.xml
<CustomField>
    <fullName>pstar__Legal_Involve_in_Past_Yr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Involve in Past Yr?</label>
    <type>Checkbox</type>
</CustomField>