force-app/main/default/objects/Opportunity/fields/pstar__Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>pstar__Living_Situation__c</fullName>
    <label>Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Setting</fullName>
            </value>
            <value>
                <fullName>Homeless (Including Shelter/Mission)</fullName>
            </value>
            <value>
                <fullName>Incarcerated</fullName>
            </value>
            <value>
                <fullName>Living Dependently</fullName>
            </value>
            <value>
                <fullName>Living Independently</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Care Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>