force-app/main/default/objects/Opportunity/fields/pstar__May_we_call_as_Peerstar__c.field-meta.xml
<CustomField>
    <fullName>pstar__May_we_call_as_Peerstar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>May we call as Peerstar?</label>
    <type>Checkbox</type>
</CustomField>