force-app/main/default/objects/Opportunity/fields/pstar__Medical_Problems__c.field-meta.xml
<CustomField>
    <fullName>pstar__Medical_Problems__c</fullName>
    <label>Medical Problems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>