force-app/main/default/objects/Opportunity/fields/pstar__Medications_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>pstar__Medications_Last_Updated__c</fullName>
    <label>Medications Last Updated</label>
    <type>Date</type>
</CustomField>