force-app/main/default/objects/Opportunity/fields/pstar__Megan_s_Law__c.field-meta.xml
<CustomField>
    <fullName>pstar__Megan_s_Law__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Megan&apos;s Law</label>
    <type>Checkbox</type>
</CustomField>