force-app/main/default/objects/Opportunity/fields/pstar__MG_SDoH__c.field-meta.xml
<CustomField>
    <fullName>pstar__MG_SDoH__c</fullName>
    <label>MG SDoH</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>