force-app/main/default/objects/Opportunity/fields/pstar__Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>pstar__Middle_Initial__c</fullName>
    <label>Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>