force-app/main/default/objects/Opportunity/fields/pstar__Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>pstar__Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>