force-app/main/default/objects/Opportunity/fields/pstar__Need_Interpreter__c.field-meta.xml
<CustomField>
    <fullName>pstar__Need_Interpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Interpreter</label>
    <type>Checkbox</type>
</CustomField>