force-app/main/default/objects/Opportunity/fields/pstar__Next_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>pstar__Next_Appt_Date__c</fullName>
    <label>Next Appt Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>