force-app/main/default/objects/Opportunity/fields/pstar__Next_Open_Action__c.field-meta.xml
<CustomField>
    <fullName>pstar__Next_Open_Action__c</fullName>
    <label>Next Open Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>