force-app/main/default/objects/Opportunity/fields/pstar__No_Medications__c.field-meta.xml
<CustomField>
    <fullName>pstar__No_Medications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Medications</label>
    <type>Checkbox</type>
</CustomField>