force-app/main/default/objects/Opportunity/fields/pstar__Ok_to_Text__c.field-meta.xml
<CustomField>
    <fullName>pstar__Ok_to_Text__c</fullName>
    <label>Ok to Text</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>