force-app/main/default/objects/Opportunity/fields/pstar__On_Hold_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>pstar__On_Hold_Time_Spent__c</fullName>
    <label>On Hold Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>