force-app/main/default/objects/Opportunity/fields/pstar__Other_Service_Involvement__c.field-meta.xml
<CustomField>
    <fullName>pstar__Other_Service_Involvement__c</fullName>
    <label>Other Service Involvement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>