force-app/main/default/objects/Opportunity/fields/pstar__Outpt_Therapy_Trtmnt_Hx__c.field-meta.xml
<CustomField>
    <fullName>pstar__Outpt_Therapy_Trtmnt_Hx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outpt Therapy Trtmnt Hx</label>
    <type>Checkbox</type>
</CustomField>