force-app/main/default/objects/Opportunity/fields/pstar__Outpt_Tx_Location_Dates__c.field-meta.xml
<CustomField>
    <fullName>pstar__Outpt_Tx_Location_Dates__c</fullName>
    <label>Outpt Tx Location Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>