force-app/main/default/objects/Opportunity/fields/pstar__Participated_in_DA_Tx__c.field-meta.xml
<CustomField>
    <fullName>pstar__Participated_in_DA_Tx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participated in DA Tx</label>
    <type>Checkbox</type>
</CustomField>