force-app/main/default/objects/Opportunity/fields/pstar__Patient__c.field-meta.xml
<CustomField>
    <fullName>pstar__Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not match filter criteria: Contact Type must be &quot;Patient&quot;.</errorMessage>
        <filterItems>
            <field>Contact.pstar__Contact_Type__c</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>