force-app/main/default/objects/Opportunity/fields/pstar__Patient_Admission__c.field-meta.xml
<CustomField>
    <fullName>pstar__Patient_Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Admission</label>
    <referenceTo>Patient_Admission__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>