force-app/main/default/objects/Opportunity/fields/pstar__Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>pstar__Patient_First_Name__c</fullName>
    <label>Patient First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>