force-app/main/default/objects/Opportunity/fields/pstar__Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>pstar__Patient_Last_Name__c</fullName>
    <label>Patient Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>