force-app/main/default/objects/Opportunity/fields/pstar__Payor_Type__c.field-meta.xml
<CustomField>
    <fullName>pstar__Payor_Type__c</fullName>
    <label>Payor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payor_Type</valueSetName>
    </valueSet>
</CustomField>