force-app/main/default/objects/Opportunity/fields/pstar__PCP_Address__c.field-meta.xml
<CustomField>
    <fullName>pstar__PCP_Address__c</fullName>
    <label>PCP Address</label>
    <type>TextArea</type>
</CustomField>