force-app/main/default/objects/Opportunity/fields/pstar__PCP_Email__c.field-meta.xml
<CustomField>
    <fullName>pstar__PCP_Email__c</fullName>
    <label>PCP Email</label>
    <type>Email</type>
</CustomField>