force-app/main/default/objects/Opportunity/fields/pstar__PCP_Phone__c.field-meta.xml
<CustomField>
    <fullName>pstar__PCP_Phone__c</fullName>
    <label>PCP Phone</label>
    <type>Phone</type>
</CustomField>