force-app/main/default/objects/Opportunity/fields/pstar__Peer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>pstar__Peer_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer Assigned</label>
    <type>Checkbox</type>
</CustomField>