force-app/main/default/objects/Opportunity/fields/pstar__Peer_Type__c.field-meta.xml
<CustomField>
    <fullName>pstar__Peer_Type__c</fullName>
    <label>Peer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-Occur</fullName>
            </value>
            <value>
                <fullName>CPS</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>EAPS</fullName>
            </value>
            <value>
                <fullName>eCBIT</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>YYA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>