force-app/main/default/objects/Opportunity/fields/pstar__Philadelphia_ID__c.field-meta.xml
<CustomField>
    <fullName>pstar__Philadelphia_ID__c</fullName>
    <label>Philadelphia ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>