force-app/main/default/objects/Opportunity/fields/pstar__Place_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>pstar__Place_of_Employment__c</fullName>
    <label>Place of Employment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>