force-app/main/default/objects/Opportunity/fields/pstar__Preferred_Contact__c.field-meta.xml
<CustomField>
    <fullName>pstar__Preferred_Contact__c</fullName>
    <label>Preferred Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
                <isActive>false</isActive>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>Home Phone</fullName>
                <isActive>false</isActive>
                <label>Home Phone</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>