force-app/main/default/objects/Opportunity/fields/pstar__Prefers_to_Meet__c.field-meta.xml
<CustomField>
    <fullName>pstar__Prefers_to_Meet__c</fullName>
    <label>Prefers to Meet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Telehealth Phone</fullName>
            </value>
            <value>
                <fullName>Telehealth with Camera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>