force-app/main/default/objects/Opportunity/fields/pstar__Primary_Care_Physician__c.field-meta.xml
<CustomField>
    <fullName>pstar__Primary_Care_Physician__c</fullName>
    <label>Primary Care Physician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>